jacket section added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             colors: {
               clifford: "#da373d",
               penguin: "#FFFBF0",
+              price: "#fabe4c",
             },
           },
         },
@@ -61,7 +62,226 @@
     </header>
     <main>
       <!-- women jacket start  -->
+      <section class="container mx-auto py-20">
+        <h2 class="text-5xl font-bold mb-7">Women Jacket</h2>
+        <div class="jacket-wrap grid lg:grid-cols-3 md:grid-cols-2 gap-7">
+          <!-- single jacket  -->
+          <div class="single-jacket p-4 shadow-lg rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-2.png" alt="" />
+            </div>
+            <div class="jacket-info">
+              <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="button-wrap flex items-center justify-between">
+                <h3 class="text-3xl font-semibold text-price">$234</h3>
+                <button
+                  class="bg-lime-700 text-white px-7 py-3 font-semibold uppercase rounded-full"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="inline h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                    />
+                  </svg>
+                  Buy now
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="single-jacket p-4 shadow-lg rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-2.png" alt="" />
+            </div>
+            <div class="jacket-info">
+              <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="button-wrap flex items-center justify-between">
+                <h3 class="text-3xl font-semibold text-price">$234</h3>
+                <button
+                  class="bg-lime-700 text-white px-7 py-3 font-semibold uppercase rounded-full"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="inline h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                    />
+                  </svg>
+                  Buy now
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="single-jacket p-4 shadow-lg rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-3.png" alt="" />
+            </div>
+            <div class="jacket-info">
+              <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="button-wrap flex items-center justify-between">
+                <h3 class="text-3xl font-semibold text-price">$234</h3>
+                <button
+                  class="bg-lime-700 text-white px-7 py-3 font-semibold uppercase rounded-full"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="inline h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                    />
+                  </svg>
+                  Buy now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- women jacket end -->
+
+      <!-- men jacket start -->
+      <section class="container mx-auto pb-7">
+        <h2 class="text-5xl font-bold mb-24">Men Jacket</h2>
+        <div class="jacket-wrap grid lg:grid-cols-3 md:grid-cols-2 gap-7">
+          <!-- single jacket  -->
+          <div class="single-jacket p-4 shadow-lg rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-4.png" alt="" />
+            </div>
+            <div class="jacket-info">
+              <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="button-wrap flex items-center justify-between">
+                <h3 class="text-3xl font-semibold text-price">$234</h3>
+                <button
+                  class="bg-lime-700 text-white px-7 py-3 font-semibold uppercase rounded-full"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="inline h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                    />
+                  </svg>
+                  Buy now
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="single-jacket p-4 shadow-lg rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-5.png" alt="" />
+            </div>
+            <div class="jacket-info">
+              <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="button-wrap flex items-center justify-between">
+                <h3 class="text-3xl font-semibold text-price">$234</h3>
+                <button
+                  class="bg-lime-700 text-white px-7 py-3 font-semibold uppercase rounded-full"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="inline h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                    />
+                  </svg>
+                  Buy now
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="single-jacket p-4 shadow-lg rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+              <img src="images/jacket-6.png" alt="" />
+            </div>
+            <div class="jacket-info">
+              <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+              <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="button-wrap flex items-center justify-between">
+                <h3 class="text-3xl font-semibold text-price">$234</h3>
+                <button
+                  class="bg-lime-700 text-white px-7 py-3 font-semibold uppercase rounded-full"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    class="inline h-6 w-6"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke="currentColor"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      stroke-width="2"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                    />
+                  </svg>
+                  Buy now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- men jacket end -->
     </main>
   </body>
 </html>
