--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 stroke-linecap="round"
                 stroke-linejoin="round"
                 stroke-width="2"
-                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 300 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
               />
             </svg>
             buy now
@@ -60,14 +60,14 @@
       </section>
       <!-- banner section end -->
     </header>
-    <main>
+    <main class="bg-[#E5E5E5]">
       <!-- women jacket start  -->
       <section class="container mx-auto py-20">
         <h2 class="text-5xl font-bold mb-7">Women Jacket</h2>
         <div class="jacket-wrap grid lg:grid-cols-3 md:grid-cols-2 gap-7">
           <!-- single jacket  -->
           <div class="single-jacket p-4 shadow-lg rounded-xl">
-            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-300 rounded-xl">
               <img src="images/jacket-2.png" alt="" />
             </div>
             <div class="jacket-info">
@@ -92,7 +92,7 @@
                       stroke-linecap="round"
                       stroke-linejoin="round"
                       stroke-width="2"
-                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 300 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
                     />
                   </svg>
                   Buy now
@@ -101,7 +101,7 @@
             </div>
           </div>
           <div class="single-jacket p-4 shadow-lg rounded-xl">
-            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-300 rounded-xl">
               <img src="images/jacket-2.png" alt="" />
             </div>
             <div class="jacket-info">
@@ -126,7 +126,7 @@
                       stroke-linecap="round"
                       stroke-linejoin="round"
                       stroke-width="2"
-                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 300 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
                     />
                   </svg>
                   Buy now
@@ -135,7 +135,7 @@
             </div>
           </div>
           <div class="single-jacket p-4 shadow-lg rounded-xl">
-            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-300 rounded-xl">
               <img src="images/jacket-3.png" alt="" />
             </div>
             <div class="jacket-info">
@@ -160,7 +160,7 @@
                       stroke-linecap="round"
                       stroke-linejoin="round"
                       stroke-width="2"
-                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 300 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
                     />
                   </svg>
                   Buy now
@@ -173,12 +173,12 @@
       <!-- women jacket end -->
 
       <!-- men jacket start -->
-      <section class="container mx-auto pb-7">
+      <section class="container mx-auto pb-24">
         <h2 class="text-5xl font-bold mb-24">Men Jacket</h2>
         <div class="jacket-wrap grid lg:grid-cols-3 md:grid-cols-2 gap-7">
           <!-- single jacket  -->
           <div class="single-jacket p-4 shadow-lg rounded-xl">
-            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-300 rounded-xl">
               <img src="images/jacket-4.png" alt="" />
             </div>
             <div class="jacket-info">
@@ -203,7 +203,7 @@
                       stroke-linecap="round"
                       stroke-linejoin="round"
                       stroke-width="2"
-                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 300 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
                     />
                   </svg>
                   Buy now
@@ -212,7 +212,7 @@
             </div>
           </div>
           <div class="single-jacket p-4 shadow-lg rounded-xl">
-            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-300 rounded-xl">
               <img src="images/jacket-5.png" alt="" />
             </div>
             <div class="jacket-info">
@@ -237,7 +237,7 @@
                       stroke-linecap="round"
                       stroke-linejoin="round"
                       stroke-width="2"
-                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 300 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
                     />
                   </svg>
                   Buy now
@@ -246,7 +246,7 @@
             </div>
           </div>
           <div class="single-jacket p-4 shadow-lg rounded-xl">
-            <div class="jacket-img-wrap p-5 bg-slate-100 rounded-xl">
+            <div class="jacket-img-wrap p-5 bg-slate-300 rounded-xl">
               <img src="images/jacket-6.png" alt="" />
             </div>
             <div class="jacket-info">
@@ -271,7 +271,7 @@
                       stroke-linecap="round"
                       stroke-linejoin="round"
                       stroke-width="2"
-                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
+                      d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 300 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z"
                     />
                   </svg>
                   Buy now
@@ -282,6 +282,11 @@
         </div>
       </section>
       <!-- men jacket end -->
+
+      <!-- our benifits section start  -->
+      <section></section>
+
+      <!-- our benifits section send -->
     </main>
   </body>
 </html>
