benifits section added

--- a/index.html
+++ b/index.html
@@ -284,9 +284,48 @@
       <!-- men jacket end -->
 
       <!-- our benifits section start  -->
-      <section></section>
+      <section class="container mx-auto py-24">
+        <div class="grid lg:grid-cols-2 gap-9">
+          <div class="rounded-xl flex items-center bg-white p-6 shadow-lg">
+            <img class="w-20 h-20" src="images/house.png" alt="" />
+            <div class="benifit-content-wrap ml-5">
+              <h4 class="text-2xl mb-2">Find the Perfect Fit</h4>
+              <p>
+                Everybody is different, which is why we offer styles for every
+                body.
+              </p>
+            </div>
+          </div>
+          <div class="rounded-xl row-span-3">
+            <img src="images/shopping.png" alt="" />
+          </div>
+          <div class="rounded-xl flex items-center bg-white p-6 shadow-lg">
+            <img class="w-20 h-20" src="images/box.png" alt="" />
+            <div class="benifit-content-wrap ml-5">
+              <h4 class="text-2xl mb-2">Find the Perfect Fit</h4>
+              <p>
+                Everybody is different, which is why we offer styles for every
+                body.
+              </p>
+            </div>
+          </div>
+          <div class="rounded-xl flex items-center bg-white p-6 shadow-lg">
+            <img class="w-20 h-20" src="images/question.png" alt="" />
+            <div class="benifit-content-wrap ml-5">
+              <h4 class="text-2xl mb-2">Find the Perfect Fit</h4>
+              <p>
+                Everybody is different, which is why we offer styles for every
+                body.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!-- our benifits section send -->
     </main>
+    <footer>
+      <p></p>
+    </footer>
   </body>
 </html>
